@@ -2,6 +2,8 @@
 
 	* src/SDCCdebug.c:
 	  Debug info for block-copy-initialized global variables, patch #262 by Peter Dons Tychsen.
+	* src/SDCCdwarf2.c:
+	  Fix handling of declared, but unused global vairables in debug output, patch #263 by Peter Dons Tychsen.
 
 2016-01-18 Ben Shi <powerstudio1st AT 163 DOT com>
 
